--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,8 @@
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>17.0.2</version>
+            <artifactId>javafx-fxml</artifactId>
+            <version>19.0.2</version>
         </dependency>
 
     </dependencies>
